# Koakuma

./: .gitignore  Cargo.toml  README.md
koakuma-api/: Cargo.toml  README.md
koakuma-api/src/: main.rs
koakuma-common/: Cargo.toml  README.md
koakuma-common/src/: lib.rs
koakuma-index/: Cargo.toml  README.md
koakuma-index/src/: main.rs
