[package]
name = "koakuma-index"
version = "0.1.0"
edition = "2018"
license = "BSD-3-Clause"

[dependencies]
koakuma-common = { path = "../koakuma-common" }

tracing = ">=0.1"
tracing-futures = ">=0.2"
tracing-subscriber = ">=0.2"
dotenv = "0.15.0"
tantivy = "0.15.3"
structopt = "0.3.17"
tokio = { version = ">=1.5.0", features = ["full"] }
tokio-util = { version = ">=0.6.6", features = ["full"] }
tokio-stream = { version = ">= 0.1.5", features = ["net", "io-util"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "0.15.4"
diesel = { version = "1.4.4", features = ["postgres"] }

lopdf = "0.26.0"
inotify = "0.9.3"
